# wasi-http-middleware

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  compatibility.toml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
artifacts/: SHA256SUMS
artifacts/sbom/: wasi-http-authn-runtime.cdx.json  wasi-http-authn.cdx.json  wasi-http-metadata.cdx.json  wasi-http-middleware-authn-policy.cdx.json  wasi-http-middleware-component-support.cdx.json  wasi-http-middleware-cors.cdx.json  wasi-http-middleware-echo-service.cdx.json  wasi-http-middleware-mock-authn-broker.cdx.json  wasi-http-middleware-passthrough.cdx.json  wasi-http-middleware-request-id.cdx.json  wasi-http-middleware-secure-defaults.cdx.json  wasi-http-middleware-security-headers.cdx.json  wasi-http-policy-core.cdx.json
components/auth-policy/: Cargo.toml
components/auth-policy/src/: lib.rs
components/authn-policy/: Cargo.toml
components/authn-policy/src/: lib.rs
components/cors/: Cargo.toml
components/cors/src/: lib.rs
components/passthrough/: Cargo.toml
components/passthrough/src/: lib.rs
components/request-id/: Cargo.toml
components/request-id/src/: lib.rs
components/secure-defaults/: Cargo.toml
components/secure-defaults/src/: lib.rs
components/security-headers/: Cargo.toml
components/security-headers/src/: lib.rs
crates/authn/: Cargo.toml  README.md
crates/authn-runtime/: Cargo.toml
crates/authn-runtime/src/: lib.rs
crates/authn/src/: lib.rs
crates/component-support/: Cargo.toml
crates/component-support/src/: lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/policy-core/: Cargo.toml
crates/policy-core/src/: lib.rs
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONFIGURATION.md  PERFORMANCE.md  RELEASE.md  SUPPORT.md  TRUST-BOUNDARY.md
fixtures/spin/composed-final/: spin.toml
fixtures/spin/composed-final-optional/: spin.toml
fixtures/spin/final-terminal/: spin.toml
fixtures/spin/full-chain/: spin.toml
fixtures/spin/public-stack/: spin.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: auth_context.rs  headers.rs  path.rs
reports/semver/: 0.1.0-alpha.1-to-0.2.0-alpha.1.md
reports/wit/: cors.wit  passthrough.wit  request-id.wit  secure-defaults.wit  security-headers.wit
scripts/: audit-spin-manifest.py  benchmark-components.sh  bootstrap-spin-main.sh  build-components.sh  check-component-contracts.sh  check-packages.sh  check-performance.py  check-semver-baseline.sh  check-soak.py  check-spin-fixtures.py  common.sh  compare-wasmtime-profiles.sh  compose-secure-defaults.sh  compose-wasmtime.sh  dry-run-supply-chain.sh  exercise-http-contract.sh  generate-checksums.sh  generate-provenance.py  generate-provenance.sh  generate-sbom.sh  normalize-sbom.py  run-fuzz-smoke.sh  run-spin-e2e.sh  run-wasmtime-e2e.sh  run-wasmtime-secure-defaults-e2e.sh  soak-runtime.sh  test_audit_spin_manifest.py
test-components/echo-service/: Cargo.toml
test-components/echo-service/src/: lib.rs
test-components/mock-authn-broker/: Cargo.toml
test-components/mock-authn-broker/src/: lib.rs
test-components/mock-policy/: Cargo.toml
test-components/mock-policy/src/: lib.rs
