[package]
name = "wasi-http-middleware-auth-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Fail-closed external policy authentication middleware for WASIp3 HTTP services"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
http.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasi-http-metadata.workspace = true
wasi-http-middleware-component-support.workspace = true
wasi-http-policy-core.workspace = true
wasip3 = { workspace = true, features = ["async-spawn"] }
wit-bindgen.workspace = true

[lints]
workspace = true
