[package]
name = "wasi-http-middleware-passthrough"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Streaming-safe WASIp3 HTTP middleware conformance component"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi-http-middleware-component-support.workspace = true
wasip3 = { workspace = true, features = ["async-spawn"] }
wit-bindgen.workspace = true

[lints]
workspace = true
