[package]
name = "wasi-http-middleware-request-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canonical request correlation middleware for WASIp3 HTTP services"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi-http-middleware-component-support.workspace = true
wasi-http-policy-core.workspace = true
wasip3 = { workspace = true, features = ["async-spawn"] }
wit-bindgen.workspace = true

[lints]
workspace = true
