[package]
name = "wasi-http-middleware-secure-defaults"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Fused request ID, security headers, CORS, and authentication middleware for WASIp3"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
http.workspace = true
thiserror.workspace = true
wasi-http-authn-runtime.workspace = true
wasi-http-metadata.workspace = true
wasi-http-middleware-component-support.workspace = true
wasi-http-policy-core.workspace = true
wasip3 = { workspace = true, features = ["async-spawn"] }
wit-bindgen.workspace = true

[lints]
workspace = true
