[package]
name = "wasi-http-authn-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal fail-closed authentication broker runtime for WASIp3 middleware"
publish = false

[dependencies]
futures.workspace = true
http.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasi-http-metadata.workspace = true
wasi-http-policy-core.workspace = true
wasip3 = { workspace = true, features = ["async-spawn"] }

[lints]
workspace = true
