[package]
name = "wasi-http-middleware-component-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal streaming-safe helpers for WASIp3 HTTP middleware components"
publish = false

[dependencies]
http.workspace = true
wasip3 = { workspace = true, features = ["async-spawn"] }

[lints]
workspace = true
