[package]
name = "wasi-http-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Trusted HTTP metadata contract for composed WASI middleware"

[dependencies]
http.workspace = true
thiserror.workspace = true

[lints]
workspace = true

