[package]
name = "wasi-http-middleware-mock-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic WASIp3 authorization policy fixture"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasip3 = { workspace = true, features = ["async-spawn"] }
wit-bindgen.workspace = true

[lints]
workspace = true
